// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebhookTestModal should WebhookTestModal match a snapshot 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Component
    afterClose={[MockFunction]}
    closeModal={[MockFunction]}
    visible={true}
    webhookId="webhookId"
  >
    <Component
      afterClose={[MockFunction]}
      renderChildren={true}
      visible={true}
    />
  </Component>
</Provider>
`;

exports[`WebhookTestModal should WebhookTestResultModal match a snapshot 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Component>
    <Component
      renderChildren={true}
      visible={false}
    />
  </Component>
</Provider>
`;

exports[`WebhookTestModalBody WebhookTestModalBody should match snapshot 1`] = `
<Component
  body={
    <React.Fragment>
      <Unknown>
        <p>
          To test your Webhook subscription, please select a ‘Subscription Topic’ below:
        </p>
      </Unknown>
      <Unknown
        id="topicId"
        labelText="Subscription Topics"
        name="topicId"
        options={Array []}
        required={true}
      />
    </React.Fragment>
  }
/>
`;

exports[`WebhookTestModalFooter WebhookTestModalFooter should match snapshot 1`] = `
<Component
  footerItems={
    <React.Fragment>
      <Unknown
        className="mr-2"
        fullWidth={true}
        onClick={[Function]}
        type="button"
        variant="danger"
      >
        CANCEL
      </Unknown>
      <Unknown
        fullWidth={true}
        type="submit"
        variant="primary"
      >
        TEST
      </Unknown>
    </React.Fragment>
  }
/>
`;
